--- a/ecommerce/ecommerce/.env
+++ b/ecommerce/ecommerce/.env
@@ -1,2 +1,4 @@
 DEBUG=True
 SECRET_KEY='django-insecure-2l39yzz&7*1pq*jo7qh-lwik#f@p7_q6dbjf3c8q)o-lb^@*hx'
+DEFAULT_FROM_EMAIL=info@healthwatchline.com
+NOTIFY_EMAIL=info@healthwatchline.com
